feat: changed content and icons styling

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<!-- <li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span> -->
 							</li>
 							<li><span class="first-block">Email:</span><span
-									class="second-block">info@yoursite.com</span></li>
+									class="second-block">dmytriy.rakovskiy@gmail.com</span></li>
 							<!-- <li><span class="first-block">Website:</span><span
 									class="second-block">www.yoursite.com</span></li>
 							<li><span class="first-block">Address:</span><span class="second-block">198 West 21th
@@ -93,15 +93,45 @@
 					</div>
 					<div class="col-md-8">
 						<h2>Hello There!</h2>
-						<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the
-							blind texts. Separated they live in bookmarksgrove there live the blind texts far from the
-							countries.</p>
-						<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere
-							ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus
-							itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there
-							live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi
-							voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
 						<p>
+							I am ISTQB certified and well-organized Senior QA Engineer (QA lead for now) with 4+ years
+							of experience.
+							I have relevant experience on many different projects Gambling, Gaming, Web, Desktop&Mobile.
+						</p>
+						<p>
+							Thus my knowledge/experience includes:
+						</p>
+						<p>
+							— Full understanding of the testing process;
+							— Understanding of SDLC;
+							— Understanding of Kanban and Scrum;
+							— Understanding of front-end technologies like HTML, CSS;
+							— Experience in writing test documentation and reporting bugs in Jira (Confluence, Jira
+							applets);
+							— Problem-solving, testing and debugging skills
+							— Experience in tools, techniques, and platforms for defect tracking, test design, and
+							execution and ability to configure them on a required level;
+							— Provide a Requirement analysis for a defined scope of work;
+							— Experience with continuous integration processes and tools (Jenkins, Team City);
+							— Experience of working with version control systems (e.g. GIT, SVN and others);
+							— Knowledge of microservice architecture;
+							— Experience with monitoring, alerting and logs analysis.
+							— Good knowledge and experience with different testing methods, techniques , strategies and
+							types (unit, components, smoke, integration, UI, API, WB\BB, UAT , regression, alpha\beta,
+							prod, accessibility, customer journey, payment, roaming, security, UX, load\performance\
+							stress, etc.);
+							— Knowledge of development tools & techniques.
+							— Experience in mobile testing.
+						</p>
+						<p>
+							Technologies I have worked with:
+							— Repositories: GitLab, Bitbucket;
+							— Postman, SoapUI, Swagger;
+							— Issue Tracking System: Jira, Adaptavist (Zephyr). Redmine, Mantis, XRAY;
+							— Frontend: DeskTop, Web Front End;
+							— Backend and APIs: Apache, JBoss;
+							— Databases: PostgreSQL;
+							— Operating Systems: Windows, Linux (Ubuntu, Centos), Android, iOS..</p>
 						<ul class="fh5co-social-icons">
 							<!-- <li><a href="#"><i class="icon-twitter2"></i></a></li>
 							<li><a href="#"><i class="icon-facebook3"></i></a></li> -->
