--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@
 									<li><a href="https://www.linkedin.com/in/dmytriy-rakovskyi/"><i
 												class="icon-linkedin2"></i></a></li>
 								</ul>
-								</p>
+								<!-- </p> -->
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</header>
+	</div>
 
 		<div id="fh5co-about" class="animate-box">
 			<div class="container">
@@ -82,9 +83,14 @@
 							<li><span class="first-block">Full Name:</span><span class="second-block">Dmytro
 									Rakovskyi</span></li>
 							<!-- <li><span class="first-block">Phone:</span><span class="second-block">+ 1235 2355 98</span> -->
-							</li>
-							<li><span class="first-block">Email:</span><span
+							<!-- </li> -->
+							<li><span class="first-block">Email:</span>
+								<span
 									class="second-block">dmytriy.rakovskiy@gmail.com</span></li>
+									<li><span class="first-block">City:</span>
+								<span
+									class="second-block">Warsaw (relocated from Kyiv recently)</span></li>
+									
 							<!-- <li><span class="first-block">Website:</span><span
 									class="second-block">www.yoursite.com</span></li>
 							<li><span class="first-block">Address:</span><span class="second-block">198 West 21th
@@ -94,7 +100,7 @@
 					<div class="col-md-8">
 						<h2>Hello There!</h2>
 						<p>
-							I am ISTQB certified and well-organized Senior QA Engineer (QA lead for now) with 4+ years
+							I am <a href="https://drive.google.com/file/d/1qYSPhcPDzCLONEEXT590ZYFXrKRge9AU/view"> ISTQB certified</a> and well-organized Senior QA Engineer (QA lead for now) with 4+ years
 							of experience.
 							I have relevant experience on many different projects Gambling, Gaming, Web, Desktop&Mobile.
 						</p>
@@ -138,7 +144,7 @@
 							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
 							<!-- <li><a href="#"><i class="icon-dribbble2"></i></a></li> -->
 						</ul>
-						</p>
+						<!-- </p> -->
 					</div>
 				</div>
 			</div>
@@ -148,7 +154,7 @@
 			<div class="container">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<h2>My Resume</h2>
+						<!-- <h2>My Resume</h2> -->
 					</div>
 				</div>
 				<div class="row">
@@ -163,12 +169,13 @@
 								<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
-										<h3 class="timeline-title">Senior Developer</h3>
-										<span class="company">Company Name - 2016 - Current</span>
+										<h3 class="timeline-title">Senior Manual Quality Assurance Engineer / Lead QA Engineer</h3>
+										<span class="company">Evolution Gaming Group (NetEnt) 
+											<br>December 2020 – December 2022</span>
 									</div>
 									<div class="timeline-body">
-										<p>Far far away, behind the word mountains, far from the countries Vokalia and
-											Consonantia, there live the blind texts.</p>
+										<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and
+											Consonantia, there live the blind texts.</p> -->
 									</div>
 								</div>
 							</li>
@@ -176,26 +183,28 @@
 								<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
-										<h3 class="timeline-title">Junior Developer</h3>
-										<span class="company">Company Name - 2013 - 2015</span>
+										<h3 class="timeline-title">Manual QA Engineer</h3>
+										<span class="company">LLC NetGame Entertainment  
+											<br> September 2019 – November 2020</span>
 									</div>
-									<div class="timeline-body">
+									<!-- <div class="timeline-body">
 										<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at
 											the coast of the Semantics, a large language ocean.</p>
-									</div>
+									</div> -->
 								</div>
 							</li>
 							<li class="animate-box timeline-unverted">
 								<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
-										<h3 class="timeline-title">UI/UX Designer</h3>
-										<span class="company">Company Name - 2010 - 2012</span>
+										<h3 class="timeline-title">Junior Quality Control Specialist (Functionality Tester)</h3>
+										<span class="company">LLC UBISOFT Ukraine 
+											<br> June 2018 – September 2019</span>
 									</div>
-									<div class="timeline-body">
+									<!-- <div class="timeline-body">
 										<p>Far far away, behind the word mountains, far from the countries Vokalia and
 											Consonantia, there live the blind texts.</p>
-									</div>
+									</div> -->
 								</div>
 							</li>
 
@@ -209,26 +218,26 @@
 								<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
-										<h3 class="timeline-title">Masters Degree</h3>
-										<span class="company">University Name - 2007 - 2009</span>
+										<h3 class="timeline-title">Master s degree in Hotel, Motel, and Restaurant Management</h3>
+										<span class="company">Kyiv National University of Trade and Economics - 2015 - 2017</span>
 									</div>
-									<div class="timeline-body">
+									<!-- <div class="timeline-body">
 										<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at
 											the coast of the Semantics, a large language ocean.</p>
-									</div>
+									</div> -->
 								</div>
 							</li>
 							<li class="animate-box timeline-unverted">
 								<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
-										<h3 class="timeline-title">Bachelors Degree</h3>
-										<span class="company">University Name - 2002 - 2006</span>
+										<h3 class="timeline-title">Bachelors degree in Hotel, Motel, and Restaurant Management</h3>
+										<span class="company">Kyiv National University of Trade and Economics - 2011 - 2015</span>
 									</div>
-									<div class="timeline-body">
+									<!-- <div class="timeline-body">
 										<p>Far far away, behind the word mountains, far from the countries Vokalia and
 											Consonantia, there live the blind texts.</p>
-									</div>
+									</div> -->
 								</div>
 							</li>
 							<!-- <li class="timeline-inverted animate-box">
@@ -255,10 +264,10 @@
 										<p>Far far away, behind the word mountains, far from the countries Vokalia and
 											Consonantia, there live the blind texts.</p>
 									</div> -->
-					</div>
-					</li>
-					</ul>
-				</div>
+					<!-- </div> -->
+					<!-- </li> -->
+					<!-- </ul> -->
+				<!-- </div> -->
 			</div>
 		</div>
 	</div>
@@ -354,7 +363,7 @@
 		</div>
 	</div> -->
 
-	<div id="fh5co-skills" class="animate-box">
+	<!-- <div id="fh5co-skills" class="animate-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -459,7 +468,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- <div id="fh5co-work" class="fh5co-bg-dark">
 		<div class="container">
@@ -604,10 +613,8 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Hire Me!</h2>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta
-						adipisci architecto culpa amet.</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Me</a></p>
+					<h2>Discover more information regarding my experience within my <a href="https://drive.google.com/file/d/1cJ4TSHKuJ19pLXXvDl36Q0Hxvjw0-Rzg/view?usp=sharing">CV</a></h2>
+					<p><a href="tel:+380936695209" class="btn btn-default btn-lg">Contact Telephone Number +380936695209</a></p>
 				</div>
 			</div>
 		</div>
@@ -664,7 +671,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; Dmytro Rakovskyi. All Rights Reserved.
+					<p>&copy; Dmytro Rakovskyi 2022. All Rights Reserved.
 				</div>
 			</div>
 		</div>
