--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 								<span
 									class="second-block">dmytriy.rakovskiy@gmail.com</span></li>
 									<li><span class="first-block">City:</span>
-								<span
-									class="second-block">Warsaw (relocated from Kyiv recently)</span></li>
+									<span class="second-block">Warsaw</span>
 									
 							<!-- <li><span class="first-block">Website:</span><span
 									class="second-block">www.yoursite.com</span></li>
@@ -100,7 +99,7 @@
 					<div class="col-md-8">
 						<h2>Hello There!</h2>
 						<p>
-							I am <a href="https://drive.google.com/file/d/1qYSPhcPDzCLONEEXT590ZYFXrKRge9AU/view"> ISTQB certified</a> and well-organized Senior QA Engineer (QA lead for now) with 4+ years
+							I am <a href="https://drive.google.com/file/d/1qYSPhcPDzCLONEEXT590ZYFXrKRge9AU/view"> ISTQB certified</a> and well-organized Senior QA Engineer (QA lead for now) with 5+ years
 							of experience.
 							I have relevant experience on many different projects Gambling, Gaming, Web, Desktop&Mobile.
 						</p>
@@ -169,9 +168,9 @@
 								<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 								<div class="timeline-panel">
 									<div class="timeline-heading">
-										<h3 class="timeline-title">Senior Manual Quality Assurance Engineer / Lead QA Engineer</h3>
+										<h3 class="timeline-title">Senior Manual Quality Assurance Engineer</h3>
 										<span class="company">Evolution Gaming Group (NetEnt) 
-											<br>December 2020 – December 2022</span>
+											<br>December 2020 – Now</span>
 									</div>
 									<div class="timeline-body">
 										<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and
@@ -613,8 +612,9 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Discover more information regarding my experience within my <a href="https://drive.google.com/file/d/1cJ4TSHKuJ19pLXXvDl36Q0Hxvjw0-Rzg/view?usp=sharing">CV</a></h2>
+					<h2>Discover more information regarding my experience within my <a href="https://www.linkedin.com/in/dmytriy-rakovskyi/">LINKED<b>IN</b><br>Profile</a></h2>
 					<p><a href="tel:+380936695209" class="btn btn-default btn-lg">Contact Telephone Number +380936695209</a></p>
+					<p>Available in Viber and Telegram</p>
 				</div>
 			</div>
 		</div>
@@ -671,7 +671,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; Dmytro Rakovskyi 2022. All Rights Reserved.
+					<p>&copy; Dmytro Rakovskyi 2023. All Rights Reserved.
 				</div>
 			</div>
 		</div>
